--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div class="bg-slate-500" id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
